src/objects/DD_Backlog_Item__c.object
<CustomObject>
    <description>***Demo Depot application*** 
This will store backlog items detail.</description>
    <fields>
        <fullName>Admin_Email__c</fullName>
        <label>Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Demo_Request__c</fullName>
        <label>Demo Request</label>
        <referenceTo>DD_Demo__c</referenceTo>
        <relationshipName>Backlog_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <referenceTo>DD_Master_Demo_Products__c</referenceTo>
        <relationshipName>Backlog_Item</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Admin__c</fullName>
        <formula>Demo_Request__r.DD_Program_Admin__r.FirstName + &apos; &apos; + Demo_Request__r.DD_Program_Admin__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Register_an_Interest__c</fullName>
        <formula>CreatedDate</formula>
        <label>Register an Interest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_By__c</fullName>
        <label>Required By</label>
        <type>Date</type>
    </fields>
    <label>Unavailable Products</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Demo_Request__c</columns>
        <columns>Material__c</columns>
        <columns>Quantity__c</columns>
        <columns>Register_an_Interest__c</columns>
        <columns>Admin_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{00000}</displayFormat>
        <label>Backlog Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unavailable Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>